package cn.edu.csu.plane.model;

/** 敌机类型枚举。 */
public enum EnemyType {
    NORMAL, MOVING, SHOOTING, BOMBER, BOSS
}
