package cn.edu.csu.plane.model;

/** 游戏状态流转枚举。 */
public enum GameStatus {
    MENU, PLAYING, PAUSED, GAME_OVER, VICTORY
}
