package cn.edu.csu.plane.model;

/** 道具类型枚举。 */
public enum ItemType {
    FIREPOWER, BOMB, SHIELD, HEAL
}
