package cn.edu.csu.plane.util;

/**
 * 全局常量配置：窗口尺寸、帧率、初始血量等游戏参数。
 */
public final class GameConfig {

    public static final int WINDOW_WIDTH = 900;
    public static final int WINDOW_HEIGHT = 700;
    public static final double FPS = 60.0;
    public static final int DEFAULT_HEALTH = 5;

    private GameConfig() {
    }
}
