package cn.edu.csu.plane.view;

/**
 * 游戏结束界面：显示最终得分，提供"重新开始"与"返回主菜单"操作。
 */
public class GameOverView {

    public void show(long score) {
        // TODO: 展示结算界面
    }
}
