package cn.edu.csu.plane.view;

/**
 * HUD 视图：实时显示得分、剩余血量与当前火力等级。
 */
public class HUDView {

    public void drawHUD(long score, int health, int firePower) {
        // TODO: 绘制 HUD 信息（得分/血量/火力）
    }
}
