package cn.edu.csu.plane.view;

/**
 * 主菜单界面：显示游戏标题、"开始游戏"按钮、操作说明、排行榜、难度设置与关于。
 */
public class MainMenuView {

    public void show() {
        // TODO: 展示主菜单界面
    }
}
